refs #ARTWORK-129-fix-inventory
- remove padding as it breaks on smaller screens

--- a/resources/css/Inventory/InventoryManagement.scss
+++ b/resources/css/Inventory/InventoryManagement.scss
@@ -480,7 +480,7 @@
             }
 
             .date-input {
-                @apply w-full flex text-xs pl-5;
+                @apply w-full flex text-xs;
             }
 
             .checkbox-input {
